[tool.poetry]
name = "immuni-exposure-reporting"
version = "1.0.0"
description = """
The Exposure Reporting Service makes the TEK Chunks created by the Exposure Ingestion Service
available to the Mobile Client. Only TEK Chunks for the last 14 days are made available.
"""
authors = []

[tool.poetry.dependencies]
immuni-common = { "path" = "common", develop = true }
python = "^3.8"

[tool.poetry.dev-dependencies]
immuni-common-dev = { "path" = "common/dev", develop = true }

[tool.poetry.scripts]
checks = "common.scripts:checks"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

